# pokemon-battle-sim

./: .gitignore  .gitmodules  BUGS.md  Cargo.toml  README.md  TODO.md  build.rs  index.html
client/: Cargo.toml  build.rs
client/src/: main.rs  net.rs  sender.rs
server/: Cargo.toml  build.rs
server/dex-builder-mini/: Cargo.toml
server/dex-builder-mini/src/: lib.rs
server/src/: configuration.rs  main.rs  net.rs  player.rs
src/: lib.rs
