[package]
name = "firecore-battle-net"
version = "0.5.0"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"
repository = "https://github.com/DoNotDoughnut/pokemon-battle-net"
build = "build.rs"
# default-run = "pokemon-battle-server"

[features]
default = []
server = ["firecore-battle/host", "firecore-battle/default_engine_scripting", "firecore-battle/ai"]
build = ["firecore-pokedex-builder", "winres"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
firecore-battle = { git = "https://github.com/fiirecore/battle", rev = "0e98c89", default-features = false }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[build-dependencies]
firecore-pokedex-builder = { git = "https://github.com/DoNotDoughnut/firecore-pokedex-builder", rev = "215467c", optional = true }
bincode = "1.3"

[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1", optional = true }

[workspace]
default-members = ["client", "server"]
members = ["client", "server"]
