[package]
name = "pokemon-battle-client"
version = "0.5.0"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2018"
build = "build.rs"

[features]
default = ["audio"]
audio = ["firecore-battle-gui/audio"]

[dependencies]
firecore-battle-net = { path = "..", features = ["build"] }
firecore-battle-gui = { git = "https://github.com/fiirecore/engine", package = "firecore-battle-gui", default-features = false }
# firecore-battle-gui = { path = "../../firecore/engine/crates/battle-gui", default-features = false } 
log = "0.4"
simple_logger = "1"
serde = "1"

[build-dependencies]
firecore-font-builder = { git = "https://github.com/DoNotDoughnut/firecore-font-builder", rev = "234b0b0" }
firecore-pokedex-engine-builder = { git = "https://github.com/DoNotDoughnut/firecore-pokedex-engine-builder", rev = "426617b" }
bincode = "1.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
