[package]
name = "pokemon-battle-client"
version = "0.6.0"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2018"
build = "build.rs"

[features]
default = ["audio"]
audio = ["firecore-battle-gui/audio"]

[dependencies]

firecore-battle-net = { path = "..", features = ["build"] }

firecore-battle-gui = { git = "https://github.com/fiirecore/engine", rev = "11e4e14", package = "firecore-battle-gui", default-features = false }
# firecore-battle-gui = { path = "../../firecore/engine/crates/battle-gui", default-features = false } 

log = "0.4"
simple_logger = "1"
serde = "1"

# quad-net = { version =  "0.1", default-features = false }
message-io = { version = "0.14", features = ["tcp"], default-features = false }
parking_lot = "0.11"


[build-dependencies]
firecore-font-builder = { git = "https://github.com/DoNotDoughnut/firecore-font-builder", rev = "057373a" }
firecore-pokedex-engine-builder = { git = "https://github.com/DoNotDoughnut/firecore-pokedex-engine-builder", rev = "49aac45" }

bincode = "1.3"
serde = "1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
