[package]
name = "pokemon-battle-client"
version = "0.6.0"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2021"
build = "build.rs"

[features]
default = ["audio"]
audio = ["firecore-battle-gui/audio"]

[dependencies]

firecore-battle-net = { path = "..", features = ["build"] }

firecore-battle-gui = { git = "https://github.com/fiirecore/engine", rev = "049ccf7", package = "firecore-battle-gui", default-features = false }
# firecore-battle-gui = { path = "../../firecore/engine/crates/battle-gui", default-features = false } 

serde = "1"

rand = { version = "0.8", default-features = false, features = ["small_rng"] }

# message-io = { version = "0.14", features = ["tcp"], default-features = false }
naia-client-socket = { git = "https://github.com/DoNotDoughnut/naia-socket", rev = "e2a86e2", features = ["mquad"] }
# quad-net = { version = "0.1.1", default-features = false }


[build-dependencies]
firecore-font-builder = { git = "https://github.com/DoNotDoughnut/firecore-font-builder", rev = "057373a" }
firecore-pokedex-engine-builder = { git = "https://github.com/DoNotDoughnut/firecore-pokedex-engine-builder", rev = "396e79e" }

bincode = "1.3"
serde = "1"
