[package]
name = "pokemon-battle-server"
version = "0.6.0"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
firecore-battle-net = { path = "..", features = ["build", "server"] }
ctrlc = "3.1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "1"
dashmap = "4.0"
log = "0.4"
hashbrown = "0.11"
message-io = { version = "0.14", features = ["tcp"], default-features = false }

[build-dependencies]
firecore-battle-builder = { git = "https://github.com/DoNotDoughnut/firecore-battle-builder", rev = "57708e0" }
bincode = "1.3"